<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/orderId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/orderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/orderDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_department"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />
</LinearLayout>